--- a/index.html
+++ b/index.html
@@ -4,43 +4,46 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="./assets/CSS/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400&display=swap" rel="stylesheet">
 	<title>MORINGA SCHOOL LANDING PAGE</title>
 </head>
 <body>
+ <div class="menu">
+        <ul class="menu-left">
+            <li><h1><span id="ken">Moringa</span> School</h1></li>
+        </ul>
+        <ul class="menu-right">
+            <li>Courses</li>
+            <li>Our Projects</li>
+            <li>Stories</li>
+            <button class="rol"><li>Enroll</li></button>
+        </ul>
+    </div> 
 
-	<div class="flex-container">
-		<h1><span id="ken">Moringa</span> School</h1> <br> <br>
-  <div>Courses</div>
-  <div>Our Projects</div>
-  <div>Stories</div>  
-  <div><button class="en">Enroll</button></div> 
-</div>
-<br>
-
-<!-- start section 1 -->
+    <!-- start section 1 --> 
 <div class="row">
   <div class="column">
     <div >
-      <h4>Moringa</h4>
-      <p><h1 style="color: #EC4067;">Nurturing Africa's Tech Talent</h1></p>
-      <p class="p1">Through market-aligned skills training, We help <br>
+      <h4 id="ot">Moringa</h4>
+      <p class="qw"><h1 style="color: #EC4067; font-family: 'Nunito', sans-serif;">Nurturing Africa's Tech Talent</h1></p>
+      <p class="p1" style="color: grey;">Through market-aligned skills training, We help <br>
       learners build new career possibilities with gtreater <br>
       confidence and capability.</p>
       <div>
         <button class="en">Enroll Now</button>
-        <button class="en">Explore</button>
+        <button class="e">Explore</button>
       </div>
     </div>
-  </div>
-
+  </div> 
   <div class="column">
     <div">
-      <p><img src="./assets/images/image1.png " height="300px"></p>
+      <p><img src="./assets/images/image1.png " height="350px"></p>
     </div>
   </div>
   </div>
 <!-- end section 1 -->
-<hr>
 <br>
 
 <br> <br>`
@@ -48,7 +51,7 @@
   <div class="row">
   <div class="column">
     <div >
-      <h2>Stories</h2><h6>So many memories</h6>
+      <h2 id="story"><span style="background-color: whitesmoke;">Stori</span>es <sub id="mem">So many memories!</sub></h2>
       <p><img src="./assets/images/image 2.png " height="300px"></p>
       
       </div>
@@ -59,8 +62,8 @@
       <br>
       <br>
       <br><br>
-      <p><strong><h3>Orientation day</h3></strong></p>
-      <p class="p1">Lorem ipsum dolor sit amet, consectetur <br> 
+      <p><strong><h3 style="font-family: 'Nunito', sans-serif">Orientation day</h3></strong></p>
+      <p class="p1" style="color: grey;">Lorem ipsum dolor sit amet, consectetur <br> 
         adipisicing elit. Nam est Purus, consectetur <br>
          sit frin bot</p>
       <div>
@@ -73,8 +76,139 @@
 <br>
 <br><br>
 
+<!-- start section 3 -->
+<div class="row">
+  <div class="column">
+    <div >
+      <br><br><br>
+      <h3 style="font-family: 'Nunito', sans-serif">Board meeting</h3>
+      <p id="lore" style="color: grey;">Lorem ipsum dolor sit amet, consectetur <br> 
+        adipisicing elit. Nam est Purus, consectetur <br>
+         sit frin bot.</p>
+      <div>
+        <p class="k">#1</p>
+        <button class="en">Read out Stories</button>
+        <p class="board">@ 23 September, 2021.</p>
+        </div>
+    </div>
+  </div>
+
+  <div class="column">
+    <div">
+      <p class="g">#2</p>
+      <p><img src="./assets/images/image 3.png " height="300px"></p>
+      <p class="meet">@ 31 October, 2021.</p>
+    </div>
+  </div>
+  </div>
+
+  <!-- end section 3 -->
+
+<!-- start section 4 -->
+<div class="row">
+  <div class="column">
+    <div >
+      <p class="f">#3</p>
+      <p><img src="./assets/images/image 4.png " height="300px"></p>
+      <p class="grad">@ 10 june, 2022.</p>
+      </div>
+  </div>
+  <div class="column">
+    <div>
+      <br>
+      <br>
+      <br><br>
+      <p><h2 style="font-family: 'Nunito', sans-serif">Graduation Party.</h2></p>
+      <p class="p1" style="color: grey;">Lorem ipsum dolor sit amet, consectetur <br> 
+        adipisicing elit. Nam est Purus, consectetur <br>
+         sit frin bot</p>
+      <div>
+        <button class="en">See Album</button>
+      </div>
+    </div>
+  </div>
+  </div>
+
+    <!-- end section 4 -->
 
 
+<!-- start of technical mentors section -->
+<div class="">
+  <br><br>
+<div>
+  <h2 id="story"><span style="background-color: whitesmoke;">Tech</span>nical Mentors <sup id="mem">Skilled,and kind!</sup></h2>
+  </div>
+<div class="tm">
+      <img src="./assets/images/image 5.png"  width="250" height="200">
+      <p class="rose">Rose Oketch</p>
+  <div class="caption">Web developement</div>
+  <div> <p id="dev">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna</p></div>
+      <button class="ask">Ask A Question</button>
+
+</div>
+
+<div class="tm" >
+      <img src="./assets/images/image 6.png"  width="250" height="200">
+      <p class="albert">Albert Byrone</p>
+    <div class="caption">Web developement</div>
+    <div> <p id="dev">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna</p></div>
+      <button class="ask">Ask A Question</button>
+</div>
+
+<div class="tm">
+      <img src="./assets/images/image 7.png" width="250" height="200">
+      <p class="katana">Raphael Katana</p>
+    <div class="caption">Web developement</div>
+    <div> <p id="dev">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna</p></div>
+      <button class="ask">Ask A Question</button>
+</div>
+
+<div class="tm">
+      <img src="./assets/images/image 8.png"  width="250" height="200" >
+      <p class="karimi">Christine Karimi</p>
+    <div class="caption">Web developement</div>
+    <div> <p id="dev">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna</p></div>
+      <button class="ask">Ask A Question</button>
+</div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<!-- end of technical mentors section -->
+
+<!-- start section 5 -->
+<div class="row">
+    <h2 id="story"><span style="background-color: whitesmoke;">Proje</span>ct <sub id="mem">It's hopefully, a good one.</sub></h2>
+  <div class="column">
+        <div >
+      <br><br><br>
+      <h1 id="our">This is our</h1>
+            <h1 id="cool">Cool Bike Website</h1>
+      <p id="lore">An application that allows users to show caase bikes for <br>
+        sale and hire whenever they re having team bonding <br>and hiking activities</p>
+      <div>
+        <button class="en">Learn more</button>
+        </div>
+    </div>
+  </div>
+
+  <div class="column">
+    <div">
+      <p><img src="./assets/images/image 9.png " height="320px" ></p>
+    </div>
+  </div>
+  </div>
+  <br>
+  <br>
+  <div id="go">
+      <p class="still"><h1 id="not">Still not sure?</h1></p>
+    <p id="ahead">Go ahead and</h1>  <button class="en">Enroll</button> or <span style="color: #EC4067;"> contact us</span></p>
+</div>
+  <br> 
+  <div class="jump">
+    <p class="last" style="text-align: center;  font-family: 'Nunito', sans-serif; ">Designed with &#128151 by J&R.</p>
+  </div>
 
 
 </body>
